Fixed header and footer to be 100% width on overflow-x

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -21,6 +21,7 @@
 body {
     height: 100vh;
     min-height: 100vh;
+    min-width: 1000px;
 }
 
 .container {
